--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
             </div>
             <div class="content_one2">
                 <div class="contact">
-                    <img src="image/user_white.png" alt="user_white" srcset="">
+                    <img src="image/user_white.png" alt="user_white">
                     <h2>Contact</h2>
                 </div>
                 <div class="three_icone_text">
                     <div class="div_font_size">
-                        <i class="fas fa-user"></i> +223 92-08-39-43
+                        <img src="icon/icontel.png" alt="icontel.png"> +223 92-08-39-43
                     </div>
                     <div class="div_font_size">
-                        <i class="fas fa-user"></i> BACODJICORONI-ACI
+                        <img src="icon/iconlocalisation.png" alt="iconlocalisation.png"> BACODJICORONI-ACI
                     </div>
                     <div class="div_font_size">
-                        <i class="fas fa-user"></i> BALLA@GMAIL.COM
+                        <img src="icon/iconmail.png" alt="iconmail.png"> BALLA@GMAIL.COM
                     </div>
                 </div>
             </div>
             <div class="content_one3">
                 <div class="section_formation">
                     <div class="icone_text_display">
-                        <img src="image/user_white.png" alt="user_white" srcset="">
+                        <img src="icon/iconformation.png" alt="iconformation">
                         <h2>Formation</h2>
                     </div>
                     <div class="content_one3_three_text">
@@ -48,7 +48,7 @@
                 </div>
                 <div class="section_langue">
                     <div class="icone_text_display">
-                        <img src="image/user_white.png" alt="user_white" srcset="">
+                        <img src="icon/iconlangue.png" alt="iconlangue">
                         <h2>Langues</h2>
                     </div>
                     <div class="content_one3_three_text">
@@ -64,7 +64,7 @@
         <div class="content_two">
             <div class="propos">
                 <div class="icone_text_display">
-                    <img src="image/user_white.png" alt="user_white" srcset="">
+                    <img src="image/user_white.png" alt="user_white">
                     <h2>A Propos</h2>
                 </div>
                 <div class="div_with">
@@ -77,7 +77,7 @@
             <br>
             <div class="propos">
                 <div class="icone_text_display">
-                    <img src="image/user_white.png" alt="user_white" srcset="">
+                    <img src="image/experience.jpg" alt="experience">
                     <h2>EXPERIENCES</h2>
                 </div>
                 <div>
@@ -114,7 +114,7 @@
             <br>
             <div class="propos">
                 <div class="icone_text_display">
-                    <img src="image/user_white.png" alt="user_white" srcset="">
+                    <img src="image/competence.png" alt="competence">
                     <h2>COMPETENCES</h2>
                 </div>
                 <div class="competence_li_text">
@@ -137,7 +137,7 @@
             <br>
             <div class="propos">
                 <div class="icone_text_display">
-                    <img src="image/user_white.png" alt="user_white" srcset="">
+                    <img src="image/realisation.png" alt="realisation">
                     <h2>MES REALISATIONS</h2>
                 </div>
                 <div class="competence_li_text">
