commentaire de mon code source

--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- <button>ghjkl</button> -->
+    <!-- la div qui enveloppe toute les élément de la page -->
     <div class="body_page">
-        <div class="content_one">
+        <!-- le conteneur de gauche -->
+        <section class="content_one">
+            <!-- le premier conteneur de gauche -->
             <div class="content_one1">
                 <h2>BALLA COULIBLAY</h2>
                 <h5>Développeur Web</h5>
                 <img src="image/user.jfif" alt="user">
             </div>
+            <!-- le deuxième conteneur de gauche -->
             <div class="content_one2">
                 <div class="contact">
                     <img src="image/user_white.png" alt="user_white">
@@ -32,6 +37,7 @@
                     </div>
                 </div>
             </div>
+            <!-- le troisième conteneur de gauche -->
             <div class="content_one3">
                 <div class="section_formation">
                     <div class="icone_text_display">
@@ -60,8 +66,10 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="content_two">
+        </section>
+            <!-- le conteneur de droite -->
+        <section class="content_two">
+            <!-- le premier conteneur de droite (a propos)-->
             <div class="propos">
                 <div class="icone_text_display">
                     <img src="image/user_white.png" alt="user_white">
@@ -75,6 +83,7 @@
                 </div>
             </div>
             <br>
+            <!-- le deuxième conteneur de droite (experience) -->
             <div class="propos">
                 <div class="icone_text_display">
                     <img src="image/experience.jpg" alt="experience">
@@ -110,7 +119,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Cette partie concerne la partie compétences -->
+            <!-- le troisième conteneur de droite (les compétences)-->
             <br>
             <div class="propos">
                 <div class="icone_text_display">
@@ -135,6 +144,7 @@
                 </div>
             </div>
             <br>
+            <!-- le quatrième conteneur de droite (la réalisation)-->
             <div class="propos">
                 <div class="icone_text_display">
                     <img src="image/realisation.png" alt="realisation">
